Prevent permission tooltip from moving if scrollbar changes. (#468)

--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -756,6 +756,7 @@ footer {
         &.photo {
             font-family: $headings-font;
             font-size: 11px;
+            position: fixed;   /* with lightbox, so prevent scrolling away */
             p {
                 line-height: 120%;
                 margin: 6px 0;
